updated for version 1.9

--- a/extra/README.html
+++ b/extra/README.html
@@ -15,7 +15,7 @@ td { padding: 12px; }
 
 <body>
 
-<h2>openMSX Launcher v1.8</h2>
+<h2>openMSX Launcher v1.9</h2>
 openMSX Launcher is a front-end for openMSX written in Java, and runs on Windows, MacOS, Linux and BSD.
 
 <p></p>
@@ -31,20 +31,15 @@ After starting the launcher for the first time, you need to set a few fields in 
 
 <p class="tab"><b>Linux/BSD</b>: unzip the Linux/BSD package anywhere on your system.</p>
 
-<h3><u>Upgrade from version 1.6 or version 1.7</u></h3>
+<h3><u>Upgrade from version 1.8</u></h3>
 
 Databases created in previous versions are fully compatible with the current version.
 
 <p>In all platforms (Windows, MacOS, Linux and BSD) you can upgrade from within the 'Help->Check for Updates' window. After you install, you need to restart the launcher.
-In order to get the new 1.8 feature 'Disable second or both FDDs', you need to copy the two scripts pressctrl.tcl and pressshift.tcl to the directory where the files extra-data.dat
-and README.html are. You can get these new files from the download page on the <a href="http://msxlaunchers.info">msxlaunchers.info</a> site.</p>
 
-<p><u>Note:</u> This upgrade method will only work if you're upgrading from v1.6 or 1.7. Unfortunately, this upgrade feature exists in v1.4 and v1.5
-but it didn't work properly in these versions.</p>
+<h3><u>Upgrade from versions earlier than 1.8</u></h3>
 
-<h3><u>Upgrade from versions earlier than 1.6</u></h3>
-
-Refer to upgrade instructions in older versions to 1.6. You can find them in past README files.
+Refer to upgrade instructions in older versions to 1.8. You can find them in past README files.
 
 <h3><u>How to start</u></h3>
 
@@ -89,6 +84,9 @@ language selection here.
 
 <h3><u>Fill Database</u></h3>
 This is a tool that scans your storage drive for MSX software supported by openMSX and adds it to the launcher databases.
+
+<h3><u>Change Machine</u></h3>
+This tool allows you to change machines in your launcher profiles in the current database or in all of them.
 
 <h3><u>Favorites</u></h3>
 Favorites button is located above the four main buttons. When pressing it, a menu containing the currently saved favorites appears.
@@ -135,6 +133,9 @@ Backups are identified by their timestamps.
 <h3><u>Activity Viewer</u></h3>
 This can be accessed from the Tools menu and there you can view the game launch history as well as the most played 10 games.
 
+<h3><u>IPS / UPS Patch Center</u></h3>
+This tool allows to patch any files using IPS or UPS patches.
+
 <h3><u>Drag and Drop</u></h3>
 You can drag and drop game files and directories to the main launcher window for quick addition to the current database.
 
@@ -179,6 +180,17 @@ end script
 Email Sam Elsharif at oelsha at engineer dot com.
 
 <h3><u>Release history</u></h3>
+
+<b>Version 1.9 - released July 9, 2017</b>
+<br></br>
+Enhancements:
+<ul>
+<li>Added IPS and UPS patch tools</li>
+<li>Added ability to change machines in launcher profiles</li>
+<li>Added Polish language</li>
+<li>Changed the order of events in the Activity Viewer to show most reccent on top</li>
+<li>Made graphical changes to the menus</li>
+</ul>
 
 <b>Version 1.8 - released Septebmer 12, 2016</b>
 <br></br>
