updated for version 1.11

--- a/extra/README.html
+++ b/extra/README.html
@@ -15,7 +15,7 @@ td { padding: 12px; }
 
 <body>
 
-<h2>openMSX Launcher v1.10.6</h2>
+<h2>openMSX Launcher v1.11</h2>
 openMSX Launcher is a front-end for openMSX written in Java, and runs on Windows, MacOS, Linux and BSD.
 
 <p></p>
@@ -31,15 +31,13 @@ After starting the launcher for the first time, you need to set a few fields in 
 
 <p class="tab"><b>Linux/BSD</b>: unzip the Linux/BSD package anywhere on your system.</p>
 
-<h3><u>Upgrade from version 1.10 or 1.10.5</u></h3>
-
-Databases created in previous versions are fully compatible with the current version.
+<h3><u>Upgrade from version 1.10.x</u></h3>
 
 <p>In all platforms (Windows, MacOS, Linux and BSD) you can upgrade from within the 'Help->Check for Updates' window. After you install, you need to restart the launcher.
 
 <h3><u>Upgrade from versions earlier than 1.10</u></h3>
 
-Refer to upgrade instructions in older versions to 1.10. You can find them in past README files.
+You must upgrade to 1.10 first before upgrading to 1.11. You can find these instructions in the older 1.10 README file.
 
 <h3><u>How to start</u></h3>
 
@@ -105,7 +103,8 @@ small buttons to either delete or edit saved filters and options to reset curren
 Search button is located above the four main buttons. When pressing it, a text field appears. Enter any part of the name of the game or first few
 or all of SHA1 code. Search is case insensitive. SHA1 code search is useful if you want to locate a game by its SHA1 code to apply patches to it.
 As you type, a list of matches appears. Select the game you're looking for by mouse click or use arrow and enter keys to select it.
-<p><u>Note:</u> mouse clicks don't work on Ubuntu, the only Linux flavour that was tested. This could be a bug in the implementation that hasn't been identified yet. Use the keyboard instead.</p>
+<p><u>Note:</u> mouse clicks don't work on Ubuntu (the only Linux flavour that was tested) or MacOS (Sierra). This could be a bug in the implementation that hasn't been identified yet.
+Use the Enter key instead.</p>
 
 <h3><u>MSX News</u></h3>
 MSX News button is located above the four main buttons. The service must be enabled in the settings to retrieve the latest MSX news. When pressing the button,
@@ -193,6 +192,14 @@ end script
 Email Sam Elsharif at oelsha at engineer dot com.
 
 <h3><u>Release history</u></h3>
+
+<b>Version 1.11 - released Aug 10, 2019</b>
+<br></br>
+Enhancements:
+<ul>
+<li>Added support for input devices and GFX9000 in game profiles</li>
+<li>Changed the look of the search and favorite lists</li>
+</ul>
 
 <b>Version 1.10.6 - released Dec 16, 2018</b>
 <br></br>
