updated for version 1.12

--- a/extra/README.html
+++ b/extra/README.html
@@ -15,7 +15,7 @@ td { padding: 12px; }
 
 <body>
 
-<h2>openMSX Launcher v1.11</h2>
+<h2>openMSX Launcher v1.12</h2>
 openMSX Launcher is a front-end for openMSX written in Java, and runs on Windows, MacOS, Linux and BSD.
 
 <p></p>
@@ -31,13 +31,13 @@ After starting the launcher for the first time, you need to set a few fields in 
 
 <p class="tab"><b>Linux/BSD</b>: unzip the Linux/BSD package anywhere on your system.</p>
 
-<h3><u>Upgrade from version 1.10.x</u></h3>
+<h3><u>Upgrade from version 1.11</u></h3>
 
 <p>In all platforms (Windows, MacOS, Linux and BSD) you can upgrade from within the 'Help->Check for Updates' window. After you install, you need to restart the launcher.
 
-<h3><u>Upgrade from versions earlier than 1.10</u></h3>
+<h3><u>Upgrade from versions earlier than 1.11</u></h3>
 
-You must upgrade to 1.10 first before upgrading to 1.11. You can find these instructions in the older 1.10 README file.
+You must upgrade to 1.11 first before upgrading to 1.12. You can find these instructions in the older 1.11 README file.
 
 <h3><u>How to start</u></h3>
 
@@ -97,7 +97,9 @@ You can go straight to your favorite game by selecting one from the list. You ca
 
 <h3><u>Filters</u></h3>
 Filters box can be found above the game list. When pressing the arrow on it, a menu pops up with a list of saved filters,
-small buttons to either delete or edit saved filters and options to reset current filters and add new ones.
+small buttons to either delete or edit saved filters, quick filters and options to reset current filters and add new ones.
+When a filter is set but not saved, the filters box will be labeled (Untitled Filter). When hovering the mouse over the filters
+box in this state, a tool tip of set filters will appear.
 
 <h3><u>Search</u></h3>
 Search button is located above the four main buttons. When pressing it, a text field appears. Enter any part of the name of the game or first few
@@ -192,6 +194,20 @@ end script
 Email Sam Elsharif at oelsha at engineer dot com.
 
 <h3><u>Release history</u></h3>
+
+<b>Version 1.12 - released Nov 3, 2019</b>
+<br></br>
+Enhancements:
+<ul>
+<li>Added quick filters</li>
+<li>Added tool tip showing current set filters when hovering over the filters box</li>
+<li>Added ability to filter by video source (if set manually in the profile)</li>
+<li>Added screenshot and sound and generation LED transition effects</li>
+</ul>
+Bug Fixes:
+<ul>
+<li>Settings screen not closing when clicking OK while MSX News service was disabled</li>
+</ul>
 
 <b>Version 1.11 - released Aug 10, 2019</b>
 <br></br>
